--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@
       <header class="header">
         <div class="container">
           <div class="header__body">
-            <a href="#">
-              <img src="#" alt="header-logo" />
+            <a class="header__logo" href="#">
+              <img src="./img/icons/ARKIMON-ICON.svg" />
+              <span>ARKIMON</span>
             </a>
-            <div class="header__burger">
-              <span></span>
-            </div>
             <nav class="header__menu">
-              <ul class="header__list">
+              <button
+                class="header__burger burger-menu"
+                type="button"
+                aria-expanded="false"
+                aria-controls="header__list"
+              >
+                <span aria-hidden="true"></span>
+              </button>
+              <ul class="header__list" id="header__list">
                 <li><a href="#" class="header__link">home</a></li>
                 <li><a href="#" class="header__link">service</a></li>
                 <li><a href="#" class="header__link">project</a></li>
@@ -30,26 +36,176 @@
       </header>
       <main class="content">
         <div class="container">
-          <div class="text">
+          <div class="content">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nulla
-              quos maiores assumenda. Vel provident dolorem labore quos quia
-              fugiat, quis quaerat modi nemo asperiores animi quas similique
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
             </p>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed nulla
-              quos maiores assumenda. Vel provident dolorem labore quos quia
-              fugiat, quis quaerat modi nemo asperiores animi quas similique
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
+            </p>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
+              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
+              temporibus perspiciatis animi praesentium error ipsam pariatur
+              porro voluptates. Minus, quidem magni ipsam amet provident
+              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
+              saepe exercitationem quod et non quasi animi error iusto ipsum
+              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
+              esse dolore consequuntur unde ratione quisquam suscipit
+              voluptatibus atque quas consequatur quaerat cupiditate minus?
+              Optio obcaecati temporibus maxime asperiores esse officiis dicta
+              non laudantium inventore sed voluptates cumque, vero aspernatur
+              iste odit molestias dignissimos tenetur velit. Deleniti, harum
+              facere.
             </p>
           </div>
         </div>
       </main>
     </div>
-
-    <script
-      defer
-      src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"
-    ></script>
-    <script defer src="./js/index.js"></script>
+    <script defer src="./js/script.js"></script>
   </body>
 </html>
