--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </div>
       </header>
-      <main class="content">
+      <main>
         <div class="container">
           <div class="content">
             <p>
