--- a/index.html
+++ b/index.html
@@ -35,173 +35,23 @@
         </div>
       </header>
       <main>
-        <div class="container">
-          <div class="content">
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vero,
-              veniam! Possimus, ullam, rem deleniti dolores quia eius vero ea
-              temporibus perspiciatis animi praesentium error ipsam pariatur
-              porro voluptates. Minus, quidem magni ipsam amet provident
-              perspiciatis voluptatem eius distinctio beatae nisi, mollitia,
-              saepe exercitationem quod et non quasi animi error iusto ipsum
-              suscipit! Amet cum modi dolores voluptate libero ut impedit ullam,
-              esse dolore consequuntur unde ratione quisquam suscipit
-              voluptatibus atque quas consequatur quaerat cupiditate minus?
-              Optio obcaecati temporibus maxime asperiores esse officiis dicta
-              non laudantium inventore sed voluptates cumque, vero aspernatur
-              iste odit molestias dignissimos tenetur velit. Deleniti, harum
-              facere.
-            </p>
+        <div class="hero">
+          <div class="container">
+            <div class="hero__body">
+              <div class="hero__title">
+                <h1>Elegant Interior Design for your home & office</h1>
+              </div>
+              <div class="hero_subtitle">
+                <p>
+                  Cras vel cursus libero. Vestibulum porttitor nunc enim, quis
+                  congue leo fringilla ut. Quisque in lacus lacus. Nunc
+                  malesuada.
+                </p>
+              </div>
+              <a class="hero__button button" href="#" type="button">
+                <span>Explore Projects</span>
+              </a>
+            </div>
           </div>
         </div>
       </main>
