--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
       </header>
       <main>
-        <div class="hero">
+        <section class="hero">
           <div class="container">
             <div class="hero__body">
               <div class="hero__title">
@@ -53,8 +53,67 @@
               </a>
             </div>
           </div>
-        </div>
+        </section>
+
+        <section class="feature">
+          <div class="container">
+            <div class="feature__body">
+              <div class="feature__column">
+                <img
+                  class="feature__logo"
+                  src="./img/features-logo/certificate.svg"
+                  alt="feature-logo"
+                />
+                <h3 class="feature__title">Certified Company</h3>
+                <p class="feature__subtitle">
+                  Morbi volutpat nisi a ligula vestibulum placerat. Suspendisse
+                  venenatis pulvinar nibh sed convallis
+                </p>
+                <a class="feature__arrow" href="#">
+                  <svg>
+                    <use href="./img/icons/arrow2.svg#feat-arr"></use>
+                  </svg>
+                </a>
+              </div>
+              <div class="feature__column">
+                <img
+                  class="feature__logo"
+                  src="./img/features-logo/support.svg"
+                  alt="feature-logo"
+                />
+                <h3 class="feature__title">Best After Support</h3>
+                <p class="feature__subtitle">
+                  Morbi volutpat nisi a ligula vestibulum placerat. Suspendisse
+                  venenatis pulvinar nibh sed convallis
+                </p>
+                <a class="feature__arrow" href="#">
+                  <svg>
+                    <use href="./img/icons/arrow2.svg#feat-arr"></use>
+                  </svg>
+                </a>
+              </div>
+              <div class="feature__column">
+                <img
+                  class="feature__logo"
+                  src="./img/features-logo/design.svg"
+                  alt="feature-logo"
+                />
+                <h3 class="feature__title">Brilliant Designer</h3>
+                <p class="feature__subtitle">
+                  Morbi volutpat nisi a ligula vestibulum placerat. Suspendisse
+                  venenatis pulvinar nibh sed convallis
+                </p>
+                <a class="feature__arrow" href="#">
+                  <svg>
+                    <use href="./img/icons/arrow2.svg#feat-arr"></use>
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
+      <p>fs</p>
     </div>
     <script defer src="./js/script.js"></script>
   </body>
