--- a/index.html
+++ b/index.html
@@ -112,8 +112,39 @@
             </div>
           </div>
         </section>
+
+        <section class="services">
+          <div class="container">
+            <div class="services__body">
+              <div class="services__column">
+                <div class="services__title titleH2">
+                  <h2>We are designing amazing staff from last 5 years</h2>
+                </div>
+                <div class="services__grid">
+                  <div class="services__item">
+                    <span>01 / Architecture</span>
+                  </div>
+                  <div class="services__item">
+                    <span>02 / Construction</span>
+                  </div>
+                  <div class="services__item">
+                    <span>03 / Equipment</span>
+                  </div>
+                  <div class="services__item">
+                    <span>04 / Renovation</span>
+                  </div>
+                  <div class="services__item">
+                    <span>05 / Sanitary</span>
+                  </div>
+                  <div class="services__item">
+                    <span>06 / Isolation</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
-      <p>fs</p>
     </div>
     <script defer src="./js/script.js"></script>
   </body>
