--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="container">
             <div class="services__body">
               <div class="services__column">
-                <div class="services__title titleH2">
+                <div class="services__title">
                   <h2>We are designing amazing staff from last 5 years</h2>
                 </div>
                 <div class="services__grid">
