--- a/index.html
+++ b/index.html
@@ -144,8 +144,42 @@
             </div>
           </div>
         </section>
+
+        <section class="projects">
+          <div class="container">
+            <div class="projects__header">
+              <h2 class="projects__title">
+                Amazing projects from most talented builders architects &
+                designers
+              </h2>
+              <div class="projects__slider-controll"></div>
+            </div>
+            <div class="projects__slider slider">
+              <div class="slider__item">
+                <img src="./img/projects/1.png" alt="project1" />
+              </div>
+              <div class="slider__item">
+                <img src="./img/projects/2.png" alt="project2" />
+              </div>
+              <div class="slider__item">
+                <img src="./img/projects/3.png" alt="project3" />
+              </div>
+              <div class="slider__item">
+                <img src="./img/projects/1.png" alt="project1" />
+              </div>
+              <div class="slider__item">
+                <img src="./img/projects/2.png" alt="project2" />
+              </div>
+              <div class="slider__item">
+                <img src="./img/projects/3.png" alt="project3" />
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script defer src="./js/slick.js"></script>
     <script defer src="./js/script.js"></script>
   </body>
 </html>
