--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 Amazing projects from most talented builders architects &
                 designers
               </h2>
-              <div class="projects__slider-controll"></div>
+              <div class="projects__slider-control"></div>
             </div>
             <div class="projects__slider slider">
               <div class="slider__item">
@@ -172,6 +172,137 @@
               </div>
               <div class="slider__item">
                 <img src="./img/projects/3.png" alt="project3" />
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="feature2">
+          <div class="container">
+            <div class="feature2__body">
+              <div class="feature2__title">
+                <h2>We create digital experience local to worldwide</h2>
+              </div>
+              <div class="feature2__row">
+                <div class="feature2__item">
+                  <img
+                    class="feature2__logo"
+                    src="./img/features-logo/building.svg"
+                    alt="feature2-logo"
+                  />
+                  <h3 class="feature2__item-title">Share your idea</h3>
+                  <p class="feature2__subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Ornare sit convallis risus sit elit. Rutrum arcu cursus
+                    aenean ut.
+                  </p>
+                </div>
+                <div class="feature2__item">
+                  <img
+                    class="feature2__logo"
+                    src="./img/features-logo/building.svg"
+                    alt="feature2-logo"
+                  />
+                  <h3 class="feature2__item-title">Let`s make the plan</h3>
+                  <p class="feature2__subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Ornare sit convallis risus sit elit. Rutrum arcu cursus
+                    aenean ut.
+                  </p>
+                </div>
+                <div class="feature2__item">
+                  <img
+                    class="feature2__logo"
+                    src="./img/features-logo/building.svg"
+                    alt="feature2-logo"
+                  />
+                  <h3 class="feature2__item-title">Now, our turn</h3>
+                  <p class="feature2__subtitle">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Ornare sit convallis risus sit elit. Rutrum arcu cursus
+                    aenean ut.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="testimonial">
+          <div class="container">
+            <div class="testimonial__body">
+              <div class="testimonial__row">
+                <div class="testimonial__column">
+                  <div class="testimonial__current-avatar">
+                    <img src="./img/avatars/ava1.png" alt="avatar" />
+                    <img src="./img/avatars/ava2.jpg" alt="avatar" />
+                    <img src="./img/avatars/ava3.jpg" alt="avatar" />
+                  </div>
+                </div>
+                <div class="testimonial__column">
+                  <div class="testimonial__slider-control"></div>
+                  <div class="testimonial__slider">
+                    <div class="testimonial__slide">
+                      <p class="testimonial__text">
+                        I am ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ornare sit convallis risus sit elit. Rutrum arcu cursus
+                        aenean ut.Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Ornare sit convallis
+                      </p>
+                      <div class="testimonial__info">
+                        <div class="testimonial__appraisal-name">
+                          <div class="testimonial__appraisal">
+                            <img src="./img/icons/like.svg" alt="like" />
+                          </div>
+                          <div class="testimonial__name">
+                            <span>Shahid Zaman</span>
+                          </div>
+                        </div>
+                        <p class="testimonial__position">
+                          Graphic Designer, Intelligent Project
+                        </p>
+                      </div>
+                    </div>
+                    <div class="testimonial__slide">
+                      <p class="testimonial__text">
+                        I am ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ornare sit convallis risus sit elit.
+                      </p>
+                      <div class="testimonial__info">
+                        <div class="testimonial__appraisal-name">
+                          <div class="testimonial__appraisal">
+                            <img src="./img/icons/like.svg" alt="like" />
+                          </div>
+                          <div class="testimonial__name">
+                            <span>Vlad Tovstochub</span>
+                          </div>
+                        </div>
+                        <p class="testimonial__position">
+                          rabotaet za pechenye
+                        </p>
+                      </div>
+                    </div>
+                    <div class="testimonial__slide">
+                      <p class="testimonial__text">
+                        I am ipsum dolor sit amet, consectetur adipiscing elit.
+                        Ornare sit convallis risus sit elit. Rutrum arcu cursus
+                        aenean ut.Lorem ipsum dolor sit amet, consectetur
+                        adipiscing elit. Ornare sit convallis
+                      </p>
+                      <div class="testimonial__info">
+                        <div class="testimonial__appraisal-name">
+                          <div class="testimonial__appraisal">
+                            <img src="./img/icons/like.svg" alt="like" />
+                          </div>
+                          <div class="testimonial__name">
+                            <span>Mikhail Karpyk</span>
+                          </div>
+                        </div>
+                        <p class="testimonial__position">prosto krasavchik</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
